# onedoc-ai

./: .env.example  .pre-commit-config.yaml  MakeFile  Makefile  README.md  database.yml  pyproject.toml
app/: database.py  main.py
app/config/: config.py
app/constants/: __init__.py  prompt_templates.py
app/core/dependancies/: core.py
app/managers/: __init__.py  asyncpg_manager.py  clustering_manager.py  embedding_manager.py  status_manager.py
app/models/: __init__.py  status.py
app/routes/: __init__.py  ai.py  status.py
app/schemas/: __init__.py  document.py  embedding.py  langchain_embedding.py
db/: schema.sql
db/migrations/: 20241119073728_init_models.sql
