[project]
name = "onedoc-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "ruff>=0.7.4",
    "pydantic-settings>=2.6.1",
    "pre-commit>=4.0.1",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3.2",
    "langchain-core>=0.3.19",
]
